examples/c/error-codes/violates-constraint/fatal/CV-CDT4-bad-static.output
CV-CDT4-bad-static.c:1:26: error: field has incomplete type 'union s'
union s { int x; union s y; };
                         ^
CV-CDT4-bad-static.c:1:7: note: definition of 'union s' is not complete until the closing '}'
union s { int x; union s y; };
      ^
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-zAfXg/pp-zt4Mi.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
